ingress-single.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: training.cl.monach.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
